# secure-baseline-drift-detection

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  roadmap.md
.github/workflows/: ci.yml  drift.yml
architecture/: component-architecture.md  data-flow.md  system-context.md  trust-boundaries.md
assets/: README.md
controls/: control-mapping.md
docs/: architecture-overview.md  design-decisions.md  use-cases.md
examples/: compliance_profile.yaml  current_state.yaml  drift_report.json
examples/baselines/: bl-20240301-webserver-prod-01.json
src/: __init__.py  baseline_store.py  cli.py  compliance_rules.py  config_parser.py  drift_detector.py
tests/: test_compliance_rules.py  test_drift_detector.py
tools/: drift_report.py  verify_fix.py
